# tsmp-oop

./: .gitignore  README.md  pyproject.toml  requirements-ui.txt  requirements.txt  tsapi.db  tsmodeling.db
.streamlit/: config.toml
alembic/: env.py
backups/: build_exog.py.bak-20251026_135559  build_exog.py.bak-20251026_135738  build_exog.py.bak-20251026_135832  build_exog.py.bak-20251026_140016  build_exog.py.bak-20251026_140142  build_exog.py.bak-20251026_141656  build_exog.py.bak-20251026_141805  exog_ui_app.py.bak-20251026_141045  requirements.txt.bak-20251026_141645
configs/: constraints.yaml  fe_config.yaml  matrix_spec.yaml  model_capability.yaml  run_spec.yaml
docker/: Dockerfile  docker-compose.yml
monitoring/: alertmanager.yml  prometheus.yml  tsmp_rules.yml
outputs/: last_run.json
patches/: add_extra_feats_libs.py  ensure_fe_extra_flag.py  fix_indentation_exog.py  fix_meta_sql.py  fix_ordinals_exog.py  fix_streamlit_unhashable_engine.py  hardening_add_fe_extra.py  replace_upsert_meta_block.py
plan/: progress.md
scripts/: build_series.py  cli.py  cli.py.bak  cli.py.pre_fix.bak  create_predictions_view.py  dep_graph.py  extract_metrics.py  extract_metrics.py.bak  generate_mock_data.py  inspect_lottery.py  inspect_repo.py  load_lottery.py  lottery-inspect  persist_to_db.py  setup_db.py  setup_db.py.bak
sql/: 20251026_hardening.sql  20251026_hardening_fix.sql  audit_snippets.sql  idx_runs_config_gin.sql  init_schema.sql  retention.sql  views.sql
tests/: test_api_endpoints.py  test_api_fields_multiuid.py  test_api_window.py  test_db_contract.py  (+5 more)
(+49 files in other folders)
